Huddle Landing Page

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -72,7 +72,7 @@ footer {
 
   .icon {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     gap: 0.8em;
 
     .fab {
