--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ footer {
 }
 footer .icon {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   gap: 0.8em;
 }
 footer .icon .fab {
