--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 body {
+  margin: 0;
+  padding: 0;
   min-height: 100vh;
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
@@ -14,11 +16,11 @@ body::before {
 }
 
 .container {
-  padding: 2em 4em;
+  padding: 3em 4em;
 }
 
 header img {
-  width: 180px;
+  width: 210px;
 }
 
 main {
@@ -26,24 +28,25 @@ main {
   flex-direction: row;
   justify-content: center;
   align-items: normal;
-  padding: 3em 0;
+  padding-top: 5em;
 }
 main img {
   width: 100%;
-  max-width: 600px;
+  max-width: 700px;
 }
 main .content {
   width: 45%;
-  padding: 0 4em;
+  padding: 0 1em 0 3em;
 }
 main .content h1 {
   font-family: "Poppins", sans-serif;
+  font-size: 38px;
 }
 main .content p {
   line-height: 1.6em;
 }
 main .content__register {
-  padding: 0.7em 3em;
+  padding: 0.8em 3.5em;
   font-family: "Poppins", sans-serif;
   font-size: 16px;
   color: #674baf;
@@ -60,7 +63,7 @@ main .content__register:hover {
 }
 
 footer {
-  padding: 1em 0;
+  padding-top: 2em;
 }
 footer .icon {
   display: flex;
@@ -109,18 +112,23 @@ footer .attribution a {
     padding: 2em 2em;
   }
 
+  header img {
+    width: 130px;
+  }
+
   main {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 3em;
   }
   main img {
-    width: 60%;
+    width: 80%;
   }
   main .content {
     width: 100%;
-    padding-top: 1em;
+    padding: 3em 0;
     text-align: center;
   }
   main .content h1 {
