--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
+  overflow-x: hidden;
   font-family: $font_body;
   font-weight: $regular_body;
   color: $white;
