--- a/css/style.css
+++ b/css/style.css
@@ -28,12 +28,14 @@ main {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: normal;
+  align-items: center;
   padding-top: 5em;
 }
-main img {
+main .image {
+  width: 55%;
+}
+main .image img {
   width: 100%;
-  max-width: 700px;
 }
 main .content {
   width: 45%;
@@ -81,10 +83,10 @@ footer .icon .fab:hover {
   color: #e882e8;
   border-color: #e882e8;
 }
-footer .icon i:nth-child(1) {
+footer .icon a:nth-child(1) {
   padding: 0.6em 0.8em;
 }
-footer .icon i:nth-child(3) {
+footer .icon a:nth-child(3) {
   padding: 0.6em 0.7em;
 }
 footer .attribution {
@@ -96,20 +98,15 @@ footer .attribution a {
   color: #fff;
 }
 
-@media (max-width: 980px) {
+@media (max-width: 880px) {
   body {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
   }
-  body::before {
-    content: url(../images/bg-mobile.svg);
-    left: auto;
-  }
 
   .container {
-    max-width: 350px;
     padding: 2em 2em;
   }
 
@@ -124,8 +121,13 @@ footer .attribution a {
     align-items: center;
     padding-top: 3em;
   }
-  main img {
-    width: 80%;
+  main .image {
+    width: 100%;
+    text-align: center;
+  }
+  main .image img {
+    width: 50%;
+    min-width: 280px;
   }
   main .content {
     width: 100%;
@@ -142,6 +144,12 @@ footer .attribution a {
 
   footer .icon {
     justify-content: center;
+  }
+}
+@media (max-width: 375px) {
+  body::before {
+    content: url(../images/bg-mobile.svg);
+    left: auto;
   }
 }
 
