--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,15 +34,17 @@ main {
   padding-top: 5em;
 
   .image {
-    width: 55%;
+    display: flex;
+    justify-content: center;
+    width: 50%;
 
     img {
-      width: 100%;
+      max-width: 100%;
     }
   }
 
   .content {
-    width: 45%;
+    width: 50%;
     padding: 0 1em 0 3em;
 
     h1 {
