Moved css to the correct folder

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
   color: #fff;
   background-color: #674baf;
 }
+
 body::before {
   content: url(../images/bg-desktop.svg);
   position: absolute;
@@ -25,29 +26,50 @@ header img {
 }
 
 main {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-top: 5em;
 }
+
 main .image {
-  width: 55%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 50%;
 }
+
 main .image img {
-  width: 100%;
+  max-width: 100%;
 }
+
 main .content {
-  width: 45%;
+  width: 50%;
   padding: 0 1em 0 3em;
 }
+
 main .content h1 {
   font-family: "Poppins", sans-serif;
   font-size: 38px;
 }
+
 main .content p {
   line-height: 1.6em;
 }
+
 main .content__register {
   padding: 0.8em 3.5em;
   font-family: "Poppins", sans-serif;
@@ -57,9 +79,12 @@ main .content__register {
   cursor: pointer;
   border-radius: 2em;
   border-style: none;
-  box-shadow: 6px 4px 15px -6px #000;
+  -webkit-box-shadow: 6px 4px 15px -6px #000;
+          box-shadow: 6px 4px 15px -6px #000;
+  -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
+
 main .content__register:hover {
   color: #fff;
   background-color: #e882e8;
@@ -68,57 +93,84 @@ main .content__register:hover {
 footer {
   padding-top: 2em;
 }
+
 footer .icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   gap: 0.8em;
 }
+
 footer .icon .fab {
   padding: 0.6em;
   border-radius: 20px;
   cursor: pointer;
+  -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
+
 footer .icon .fab:hover {
   color: #e882e8;
   border-color: #e882e8;
 }
+
 footer .icon a:nth-child(1) {
   padding: 0.6em 0.8em;
 }
+
 footer .icon a:nth-child(3) {
   padding: 0.6em 0.7em;
 }
+
 footer .attribution {
   padding-top: 4em;
   font-size: 11px;
   text-align: center;
 }
+
 footer .attribution a {
   color: #fff;
 }
 
 @media (max-width: 880px) {
   body {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
-
   .container {
     padding: 2em 2em;
   }
-
   header img {
     width: 130px;
   }
-
   main {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding-top: 3em;
   }
   main .image {
@@ -141,16 +193,17 @@ footer .attribution a {
     margin-top: 15px;
     padding: 0.7em 6em;
   }
-
   footer .icon {
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
+
 @media (max-width: 375px) {
   body::before {
     content: url(../images/bg-mobile.svg);
     left: auto;
   }
 }
-
 /*# sourceMappingURL=style.css.map */
